# TFG

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_en  Doxyfile_es  README.md  build.sh  dockerfile  ir  out
doc/: Anexos.tex  Memoria.tex  TFG.tex  anexos.tex  bibliografia.bib  bibliografiaAnexos.bib
doc/tex/: 1_Introduccion.tex  2_Objetivos_del_proyecto.tex  3_Conceptos_teoricos.tex  4_Tecnicas_y_herramientas.tex  5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex  6_Trabajos_relacionados.tex  7_Conclusiones_Lineas_de_trabajo_futuras.tex  A_Plan_proyecto.tex  B_Requisitos.tex  C_Diseno.tex  D_Manual_programador.tex  E_Manual_usuario.tex  F_ODS.tex  G_Manual_lenguaje.tex
input/: expr.T
src/: main.cpp
src/AST/: AST.cpp  AST.h  ASTBuilder.cpp  ASTBuilder.h  SupportedTypes.h  TimeStamp.h  Type.h
src/LLVM/: CodegenContext.h  IRGenerator.cpp  IRGenerator.h
src/compat/: antlr4-runtime.h
src/compiler/: Compiler.cpp  Compiler.h  CompilerError.h  CompilerFlags.cpp  CompilerFlags.h
src/grammar/: LexerErrorListener.h  ParserErrorListener.h  TLexer.cpp  TLexer.g4  TLexer.h  TParser.cpp  TParser.g4  TParser.h
src/runtime/: Event.cpp  Event.h  Runtime.cpp  Runtime.h  TLib.c  TLib.cpp  entry.s  main.cpp  runtime.c  runtime.s
src/semantic/: Scope.cpp  Scope.h  SemanticVisitor.cpp  SemanticVisitor.h  SymbolTable.cpp  SymbolTable.h
tests/: eventTest.cpp  exprTest.cpp  functionTest.cpp  ifElseTest.cpp  loopTest.cpp  testAST.cpp  testHelpers.cpp  testHelpers.h  testIR.cpp  testLexer.cpp  testParser.cpp  variableTest.cpp
tests/input/: basicArithmeticExpr.T  basicLogicalExpr.T  complexExpr.T  complexScopeTest.T  else.T  elseif.T  eventEvery.T  eventRef.T  for.T  functionCall.T  functionCallRef.T  functionDec.T  functionDeclaration.T  functionDef.T  if.T  limitedEvent.T  loopControl.T  nestedIf.T  postfixIncOperation.T  prefixDecOperation.T  stringLogicalExprEQ.T  stringLogicalExprNQ.T  timeType.T  varShadowing.T  variableAssign.T  variableCall.T  variableDec.T  variableDecAssign.T  variableTime.T  while.T
tests/input/demo/: eventEvery.T  for.T  function.T  loop.T  optimization.T  prime.T  prime.c  prime.py  primeFunction.T  references.T  types.T  varShadowing.T  variable.T
